# rust-gpu-bindless

./: Cargo.toml  image_types.rs
crates/bindless/: Cargo.toml
crates/bindless/src/: lib.rs
crates/buffer-content/src/: lib.rs  primitive.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/backing/: ab.rs  mod.rs  range_set.rs  slot_array.rs  table.rs
crates/core/src/descriptor/: bindless.rs  buffer_metadata_cpu.rs  buffer_table.rs  descriptor_content.rs  image_table.rs  mod.rs  mutdesc.rs  rc.rs  sampler_table.rs
crates/core/src/pipeline/: access_buffer.rs  access_image.rs  access_lock.rs  access_type.rs  compute_pipeline.rs  graphics_pipeline.rs  mesh_graphics_pipeline.rs  mod.rs  mut_or_shared.rs  recording.rs  rendering.rs
crates/core/src/platform/: bindless.rs  bindless_pipeline.rs  mod.rs
crates/core/src/platform/ash/: access_type.rs  ash_ext.rs  bindless.rs  bindless_pipeline.rs  convert.rs  executing.rs  image_format.rs  init.rs  recording.rs  rendering.rs  (+1 more)
crates/egui/: Cargo.toml  build.rs
crates/egui-examples/: Cargo.toml
crates/egui-examples/src/: lib.rs
crates/egui-shaders/: Cargo.toml
crates/egui-shaders/src/: lib.rs  vertex.rs
crates/egui/src/: convert.rs  lib.rs  renderer.rs  winit_integration.rs
crates/egui/src/platform/: ash.rs  mod.rs
crates/macro-utils/src/: modnode.rs
crates/macros/src/: assert_transfer_size.rs  bindless.rs  buffer_struct.rs  lib.rs  symbols.rs
crates/rust-gpu-bindless/: Cargo.toml
crates/shader-builder/: Cargo.toml
crates/shader-builder/src/: codegen.rs  lib.rs  symbols.rs
crates/shaders/src/: lib.rs  shader.rs  shader_type.rs
crates/shaders/src/buffer_content/: mod.rs
crates/shaders/src/descriptor/: buffer.rs  descriptor_content.rs  descriptors.rs  id.rs  image.rs  mod.rs  predefined_image.rs  reference.rs  strong.rs  transient.rs  weak.rs
crates/shaders/src/utils/: rect.rs
crates/winit/: Cargo.toml
crates/winit/src/: ash.rs  event_loop.rs  lib.rs  window_ref.rs
docs/: book.toml
docs/src/: SUMMARY.md  rust-gpu-bindless.md
docs/src/getting_started/: first_dispatch.md  first_shader.md  getting_started.md  indirections.md  sync.md
docs/src/reference/: bindless-core.md  buffer_struct.md  desc.md  init.md
docs/src/triangles/: draw.md  shaders.md  swapchain.md
rust-gpu-bindless/: Cargo.toml
rust-gpu-bindless-buffer-content/: Cargo.toml
rust-gpu-bindless-buffer-content/src/: glam.rs  lib.rs  primitive.rs
rust-gpu-bindless-egui/: Cargo.toml  build.rs
rust-gpu-bindless-egui-examples/: Cargo.toml
rust-gpu-bindless-egui-examples/src/: lib.rs
rust-gpu-bindless-egui-shaders/: Cargo.toml
rust-gpu-bindless-egui-shaders/src/: lib.rs  vertex.rs
rust-gpu-bindless-egui/examples/: basic.rs
rust-gpu-bindless-egui/src/: ash.rs  lib.rs  renderer.rs  winit_integration.rs
rust-gpu-bindless-egui/src/platform/: mod.rs
rust-gpu-bindless-macro-utils/: Cargo.toml
rust-gpu-bindless-macro-utils/src/: lib.rs  modnode.rs
rust-gpu-bindless-macros/: Cargo.toml
rust-gpu-bindless-macros/src/: assert_transfer_size.rs  bindless.rs  buffer_content.rs  buffer_struct.rs  lib.rs  symbols.rs
rust-gpu-bindless-shader-builder/: Cargo.toml
rust-gpu-bindless-shader-builder/src/: codegen.rs  lib.rs
rust-gpu-bindless-shaders/: Cargo.toml
rust-gpu-bindless-shaders/src/: lib.rs  shader_type.rs
rust-gpu-bindless-shaders/src/buffer_content/: metadata.rs  mod.rs
rust-gpu-bindless-shaders/src/descriptor/: buffer.rs  descriptor_content.rs  descriptors.rs  id.rs  image.rs  mod.rs  reference.rs  sampler.rs  strong.rs  transient.rs  weak.rs
rust-gpu-bindless-shaders/src/frame_in_flight/: frame.rs  mod.rs
rust-gpu-bindless-shaders/src/utils/: mod.rs  rect.rs  srgb.rs  viewport.rs
rust-gpu-bindless-winit/: Cargo.toml
rust-gpu-bindless-winit/src/: ash.rs  event_loop.rs  lib.rs  window_ref.rs
rust-gpu-bindless/src/: frame_manager.rs  lib.rs  required_features.rs
rust-gpu-bindless/src/backend/: ab.rs  range_set.rs  table.rs
rust-gpu-bindless/src/backing/: ab.rs  range_set.rs  table.rs
rust-gpu-bindless/src/descriptor/: bindless.rs  bindless_descriptor_allocator.rs  boxed.rs  buffer_metadata_cpu.rs  buffer_table.rs  descriptor_content.rs  descriptor_counts.rs  image_table.rs  mod.rs  mutable.rs  mutdesc.rs  pending.rs  rc.rs  rc_reference.rs  sampler_table.rs
rust-gpu-bindless/src/frame_in_flight/: mod.rs  resource.rs  upload.rs
rust-gpu-bindless/src/generic/backing/: ab.rs  mod.rs  range_set.rs  table.rs
rust-gpu-bindless/src/generic/descriptor/: bindless.rs  buffer_metadata_cpu.rs  buffer_table.rs  descriptor_content.rs  extent.rs  image_table.rs  mod.rs  rc.rs  sampler_table.rs
rust-gpu-bindless/src/generic/pipeline/: access_buffer.rs  access_image.rs  mod.rs  mut_or_shared.rs  recording.rs  rendering.rs
rust-gpu-bindless/src/generic/platform/: bindless.rs  bindless_pipeline.rs  mod.rs
rust-gpu-bindless/src/generic/platform/ash/: access_type.rs  bindless.rs  bindless_pipeline.rs  convert.rs  executing.rs  init.rs  recording.rs  rendering.rs  table_ext.rs
rust-gpu-bindless/src/pipeline/: access_buffer.rs  access_error.rs  access_image.rs  access_lock.rs  access_type.rs  bindless_pipeline.rs  compute_pipeline.rs  execution_context.rs  graphics_pipeline.rs  mesh_graphics_pipeline.rs  mod.rs  mut_or_shared.rs  mutable.rs  recording.rs  rendering.rs  shader.rs  specialize.rs  traditional_graphics_pipeline.rs
rust-gpu-bindless/src/platform/: ash.rs  bindless.rs  bindless_pipeline.rs  interface.rs  mod.rs
rust-gpu-bindless/src/platform/ash/: access_type.rs  ash_ext.rs  bindless.rs  bindless_pipeline.rs  convert.rs  executing.rs  execution_resource.rs  init.rs  mod.rs  platform.rs  recording.rs  rendering.rs  table_ext.rs
tests/integration-test/: Cargo.toml  build.rs
tests/integration-test-shader/: Cargo.toml
tests/integration-test-shader/src/: add_single.rs  buffer_barriers.rs  lib.rs  simple_compute.rs  triangle.rs
tests/integration-test/src/: add_single.rs  buffer_barrier.rs  image_copy.rs  lib.rs  semaphore.rs  simple_compute.rs  triangle.rs
(+16 files in other folders)
