[package]
name = "rust-gpu-bindless-macro-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# codegen
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

# other
smallvec = { workspace = true }
