[package]
name = "rust-gpu-bindless-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
# codegen
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
