[package]
name = "rust-gpu-bindless-shader-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["use-installed-tools", "use-pretty-print"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]
use-pretty-print = ["dep:prettyplease"]

[dependencies]
spirv-builder = { workspace = true }
smallvec = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro-crate = { workspace = true }

# feature use-pretty-print
prettyplease = { workspace = true, optional = true }
