[package]
name = "rust-gpu-bindless"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# members
rust-gpu-bindless-shaders = { workspace = true }

# device
vulkano = { workspace = true }

# async
futures = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

# profiling
profiling = { workspace = true }

# other
parking_lot = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
once_cell = { workspace = true }
ahash = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = { workspace = true }
rangemap = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
anyhow = { workspace = true }
