[package]
name = "rust-gpu-bindless"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["ash"]
# Select ash as the single primary platform. Only the final binary crate should enable this feature.
ash = ["rust-gpu-bindless-core/ash"]

[dependencies]
# members
rust-gpu-bindless-core = { workspace = true }
