[package]
name = "rust-gpu-bindless-egui-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[dependencies]
# members
rust-gpu-bindless-core = { workspace = true, features = ["ash"] }
rust-gpu-bindless-egui = { workspace = true, features = ["winit"] }
rust-gpu-bindless-winit = { workspace = true, features = ["ash"] }

# vulkan
ash = { workspace = true }
winit = { workspace = true }

# profiling
profiling = { workspace = true }

# egui
egui = { workspace = true }
egui_demo_lib = { workspace = true }

# other
anyhow = { workspace = true }
