[package]
name = "rust-gpu-bindless-egui-shaders"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib", "dylib"]

[features]
epaint = ["dep:epaint"]

[dependencies]
# members
rust-gpu-bindless-shaders = { workspace = true }
rust-gpu-bindless-macros = { workspace = true }

# rust-gpu
spirv-std = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }

# egui
epaint = { workspace = true, optional = true }

# other
static_assertions = { workspace = true }
bitflags = { workspace = true }
