[package]
name = "rust-gpu-bindless-shader-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
use-pretty-print = ["dep:prettyplease"]

[dependencies]
# members
rust-gpu-bindless-macro-utils = { workspace = true }

# vulkan
ash = { workspace = true }

# rust-gpu
cargo-gpu-install = { workspace = true }

# codegen
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro-crate = { workspace = true }

# other
anyhow = { workspace = true }
thiserror = { workspace = true }

# feature use-pretty-print
prettyplease = { workspace = true, optional = true }
