[package]
name = "integration-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# members
rust-gpu-bindless = { workspace = true }
integration-test-shader = { workspace = true }
anyhow = { workspace = true }
approx = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rust-gpu-bindless-shader-builder = { workspace = true }
